# mcpclinical-demo

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  clinical_dashboard.py  clinical_mcp.py  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
support/: generate_clinical.py  prompts.py  study_protocol.md  styles.css
